syntax = "proto3";

package todostore;

option java_multiple_files = true;
option java_outer_classname = "TodoStore";
option java_package = "com.example.demo.todostore";

//import "google/protobuf/empty.proto";

service Todostore {
  rpc GetTodos(GetTodosRequest) returns (GetTodosResponse) {}
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse) {}
}

message GetTodosRequest {
}
message GetTodosResponse {
  repeated Todo todo = 1;
}

message GetTodoRequest {
  int64 id = 1;
}
message GetTodoResponse {
  Todo todo = 1;
}

message Todo {
  int64 id = 1;
  string content = 2;
}
